--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@ body{
     /*align-items:center;*/
     padding: 0%;
     margin: 0%;
+    
     font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     box-sizing: border-box;
     min-height: 100vh;
@@ -51,7 +52,7 @@ body{
     grid-area: add;
     background-color: rgb(255, 204, 77);
 }
-#substract{
+#subtract{
     grid-area: substract;
     background-color: rgb(255, 204, 77);
 }
@@ -80,6 +81,7 @@ body{
 .zero{
     grid-area: zero;
 }
+
 .one{
     grid-area: one;
     
